sfdx/force-app/main/default/objects/Error_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>The action taken that generated the error.</description>
    <inlineHelpText>The action taken that generated the error.</inlineHelpText>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>