sfdx/force-app/main/default/objects/Error_Log__c/fields/Dump__c.field-meta.xml
<CustomField>
    <fullName>Dump__c</fullName>
    <description>Stores response body error when response is not successful.</description>
    <inlineHelpText>Response body error when response is not successful.</inlineHelpText>
    <label>Dump</label>
    <length>1025</length>
    <type>LongTextArea</type>
</CustomField>