sfdx/force-app/main/default/objects/Error_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Stores Line number of failure.</description>
    <inlineHelpText>Line number of the failure.</inlineHelpText>
    <label>Line Number</label>
    <type>TextArea</type>
</CustomField>