sfdx/force-app/main/default/objects/Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Stores the message from the error.</description>
    <inlineHelpText>The message from the error.</inlineHelpText>
    <label>Message</label>
    <length>1025</length>
    <type>LongTextArea</type>
</CustomField>