sfdx/force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Connection Error Records</label>
    <columns>CREATED_DATE</columns>
    <columns>Action_Taken__c</columns>
    <columns>Message__c</columns>
    <columns>Line_Number__c</columns>
    <filterScope>Everything</filterScope>
</ListView>