sfdx/force-app/main/default/objects/Error_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>